Add updating a host's mac address list functionality
